--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint src",
     "prebuild": "rimraf dist",
     "build": "cross-env NODE_ENV=production webpack -p --config webpack.config.production.js",
-    "postbuild": "copyfiles index.html dist"
+    "postbuild": "copyfiles index.html manifest.json dist"
   },
   "repository": {
     "type": "git",
@@ -39,6 +39,7 @@
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.9.1",
+    "file-loader": "^2.0.0",
     "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.5.3",
     "open-browser-webpack-plugin": "0.0.5",
@@ -62,6 +63,7 @@
   "dependencies": {
     "@digitalwing.co/redux-query-immutable": "2.3.8",
     "bchaddrjs": "^0.2.2",
+    "better-react-spinkit": "^2.0.4",
     "bip39": "^2.5.0",
     "bitcore-lib": "^0.15.0",
     "history": "^4.7.2",
