--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "preact-compat": "^3.18.4",
     "prop-types": "^15.6.0",
     "react": "^16.4.1",
+    "react-code-input": "^3.8.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
