--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "icons": {},
   "browser_action": {
+    "default_title": "Alter-app",
     "default_popup": "index.html"
   },
   "permissions": ["activeTab"]
