--- a/manifest.json
+++ b/manifest.json
@@ -7,5 +7,11 @@
     "default_title": "Alter-app",
     "default_popup": "index.html"
   },
+  "background": {
+    "scripts": [
+      "background.js"
+    ],
+    "persistent": false
+  },
   "permissions": ["activeTab"]
 }
