--- a/manifest.json
+++ b/manifest.json
@@ -13,5 +13,8 @@
     ],
     "persistent": false
   },
-  "permissions": ["activeTab"]
+  "permissions": [
+    "activeTab",
+    "background"
+  ]
 }
