--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   "dependencies": {
     "@digitalwing.co/redux-query-immutable": "2.3.8",
     "bchaddrjs": "^0.2.2",
+    "bcryptjs": "^2.4.3",
     "better-react-spinkit": "^2.0.4",
     "bip39": "^2.5.0",
     "bitcore-lib": "^0.15.0",
