--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "history": "^4.7.2",
     "immutable": "^3.8.2",
     "lodash": "^4.17.4",
+    "moment": "^2.23.0",
     "normalizr": "^3.3.0",
     "preact": "^8.3.1",
     "preact-compat": "^3.18.4",
