--- a/package.json
+++ b/package.json
@@ -62,11 +62,12 @@
   },
   "dependencies": {
     "@digitalwing.co/redux-query-immutable": "2.3.8",
-    "bchaddrjs": "^0.2.2",
+    "bchaddrjs": "^0.2.3",
     "bcryptjs": "^2.4.3",
     "better-react-spinkit": "^2.0.4",
     "bip39": "^2.5.0",
     "bitcore-lib": "^0.15.0",
+    "bitcore-lib-cash": "^0.19.0",
     "history": "^4.7.2",
     "immutable": "^3.8.2",
     "lodash": "^4.17.4",
@@ -75,6 +76,7 @@
     "preact": "^8.3.1",
     "preact-compat": "^3.18.4",
     "prop-types": "^15.6.0",
+    "qrcode.react": "^0.8.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.6",
