--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,7 @@
     ],
     "persistent": false
   },
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "permissions": [
     "activeTab",
     "background"
