--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "redux-immutable": "^4.0.0",
     "redux-logger": "^3.0.6",
     "reselect": "^3.0.1",
-    "sass-resources-loader": "^1.3.1"
+    "sass-resources-loader": "^1.3.1",
+    "wallet-address-validator": "^0.2.4"
   }
 }
