--- a/manifest.json
+++ b/manifest.json
@@ -11,11 +11,14 @@
     "scripts": [
       "background.js"
     ],
-    "persistent": false
+    "persistent": true
   },
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "permissions": [
     "activeTab",
     "background"
-  ]
+  ],
+  "externally_connectable": {
+		"matches": ["http://127.0.0.1:5500/*"]
+	}
 }
