--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,8 @@
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "permissions": [
     "activeTab",
-    "background"
+    "background",
+    "notifications"
   ],
   "externally_connectable": {
 		"matches": ["http://127.0.0.1:5500/*"]
