--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
     "bip39": "^2.5.0",
     "bitcore-lib": "^0.15.0",
     "bitcore-lib-cash": "^0.19.0",
+    "ethereumjs-tx": "^1.3.7",
+    "ethereumjs-wallet": "^0.6.3",
     "history": "^4.7.2",
     "immutable": "^3.8.2",
     "lodash": "^4.17.11",
@@ -90,6 +92,7 @@
     "redux-logger": "^3.0.6",
     "reselect": "^3.0.1",
     "sass-resources-loader": "^1.3.1",
-    "wallet-address-validator": "^0.2.4"
+    "wallet-address-validator": "^0.2.4",
+    "web3": "^1.0.0-beta.41"
   }
 }
