--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint src",
     "prebuild": "rimraf dist",
     "build": "cross-env NODE_ENV=production webpack -p --config webpack.config.production.js",
-    "postbuild": "copyfiles index.html manifest.json dist"
+    "postbuild": "copyfiles index.html manifest.json background.js dist"
   },
   "repository": {
     "type": "git",
